[metadata]
name = colcon-nix
version = attr: colcon_nix.__version__
author = Mike Purvis
author_email = mpurvis@clearpath.ai
maintainer = Mike Purvis
maintainer_email = mpurvis@clearpath.ai
description = Nix plugins for colcon.
long_description = file: README.md
keywords = colcon

[options]
install_requires =
  colcon-core
packages =
  colcon_nix
zip_safe = true

[options.entry_points]
console_scripts =
    colcon_distro_cache = colcon_distro.cli:main
    colcon_distro_server = colcon_distro.server:main
colcon_core.package_augmentation =
    narhash = colcon_nix.augmentation:NarhashPackageAugmentation
colcon_distro.repository_augmentation =
    narhash = colcon_nix.augmentation:NarhashRepositoryAugmentation

[flake8]
import-order-style = google
max-line-length = 120
exclude = setup.py,vendor
ignore = D,W503
